<resources>
    <string name="hello">Hello World, MainTabHostActivity!</string>
    <string name="title_recommend">天威推荐</string>
    <string name="title_live">直  播</string>
    <string name="title_vod">点  播</string>
    <string name="title_userZone">个人中心</string>
    <string name="title_search">搜  索</string>
    <string name="title_special">专   题</string>
    <string name="app_name">多屏看</string>
    <string name="title_wifi_devices">查找到的WIFI设备</string>
    <string name="device_scanning">"正在查找设备..."</string>
    <string name="button_scan">搜索设备</string>
    <string name="cur_use_device">当前设备：</string>
    <string name="usable_device">可用设备：</string>
    <string name="state_connected">已连接设备</string>
    <string name="connect">连接</string>
    <string name="network_unconnect">抱歉，网络连接失败，是否进行网络设置？</string>
    <string name="state_connecting_memo">正在与设备建立连接</string>
    <string name="state_connected_memo">已经与设备建立连接</string>
    <string name="state_none_memo">未与任何设备连接!</string>
    <string name="state_none">未与设备建立连接</string>
    <string name="scan_device">连接设备</string>
    <string name="scanning_device">正在查找机顶盒………</string>
    <string name="title_paired_devices">已配对的设备</string>
    <string name="device_found">成功找到甩信设备</string>
    <string name="device_connecting">正在连接，请稍候...</string>
    <string name="device_connect_ok">连接成功</string>
    <string name="device_connect_fail">连接失败</string>
    <string name="search_hit_text">输入你想搜索的视频的名字</string>
    <string name="help_suggest">意见反馈</string>
    <string name="update">软件更新</string>
    <string name="need_update">, 多屏看有功能更强大的新版本了，请您更新!</string>
    <string name="current_version_is">"当前版本: "</string>
    <string name="latest_version_name">"最新版本: "</string>
    <string name="will_update">, 是否更新?</string>
    <string name="query_version">软件更新</string>
    <string name="help">软件帮助</string>
    <string name="system_set">系统设置</string>
    <string name="tianwei_recommends">天威推荐</string>
    <string name="help_about_version">当前版本：</string>
    <string name="download_finish">下载完成</string>
    <string name="help_about_us">联系我们</string>
    <string name="help_about_company">出品公司：深圳市天威视讯股份有限公司</string>
    <string name="help_about_app">软件介绍：天威多屏看客户端，国内第一款支持多屏互动的视频应用产品。\n产品包括电视业务多终端迁移；EPG Guide 电视指南；时移、回看电视；\n社交电视；OTT自助服务功能</string>
    <string name="help_about_topway_website">官方网站：ott.topway.cn</string>
    <string name="help_about_topway_email">TOPWAY All Rights Reserved</string>
    <string name="help_suggest_suggest">建议反馈</string>
    <string name="help_suggest_bugs">问题反馈</string>
    <string name="feed_back_success">提交成功！</string>
    <string name="feed_back_failed">提交失败，请稍候再试！</string>
    <string name="help_suggest_better">改善建议</string>
    <string name="help_suggest_content">内容需求</string>
    <string name="help_suggest_newuser">新手咨询</string>
    <string name="help_suggest_other">其他</string>
    <string name="help_suggest_desc">请详细描述您的建议、意见和问题等：</string>
    <string name="help_suggest_phone">您的手机号码(必填)：</string>
    <string name="help_suggest_email">您的邮箱地址(必填)：</string>
    <string name="help_use_help">使用帮助</string>
    <string name="help_use_question">使用天威客户端观看直播和点播视频、业务办理时需要具备怎样的网络条件？</string>
    <string name="help_use_answar">支持WIFI网络在线观看直播和点播视频、业务办理能够达到清晰、流畅的播放效果。</string>
    <string name="help_use_tips">首页直播频道推荐默认开关。</string>
    <string name="login_success">登录成功！</string>
    <string name="login_failed">用户名或密码错误！</string>
    <string name="login_namenull">用户名不能为空！</string>
    <string name="login_pwdnull">密码不能为空！</string>
    <string name="logout_success">注销成功！</string>
    <string name="logout_failed">注销失败！</string>
    <string name="login_name">用户名：</string>
    <string name="login_pwd">密    码：</string>
    <string name="login_submit">提交</string>
    <string name="login_empty">清空</string>
    <string name="login_btn">登入</string>
    <string name="device_ok">确认</string>
    <string name="device_cancel">取消</string>
    <string name="login_register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="login_pwdretake">找回密码</string>
    <string name="aoto_login">下次自动登录</string>
    <string name="record_login_msg">记住密码</string>
    <string name="rank_vod">点播排行</string>
    <string name="rank_live">直播排行</string>
    <string name="hot_zhuanti">热门专题</string>
    <string name="top16">top16</string>
    <string name="emil_num">邮箱号 : </string>
    <string name="phone_num">手机号 : </string>
    <string name="is_last_page">已经是最后一页了~</string>
    <string name="is_first_page">已经是第一页了~</string>
    <string name="initialize_data">正在加载数据,请稍后...</string>
    <string name="asset_detail">节目详情</string>
    <string name="maybe_like">您可能喜欢</string>
    <string name="movie_director">导演：</string>
    <string name="host">主持人：</string>
    <string name="movie_actors">主演：</string>
    <string name="movie_time">上映时间：</string>
    <string name="movie_type">类型：</string>
    <string name="movie_language">语言：</string>
    <string name="movie_length">片长：</string>
    <string name="particular_play">观看</string>
    <string name="collect_failed">收藏失败！</string>
    <string name="collected">已收藏！</string>
    <string name="share_sucess">分享成功！</string>
    <string name="share_failed">分享失败！</string>
    <string name="share_failed_error">分享失败，不能重复发表内容相同的微博！</string>
    <string name="particular_review">影评</string>
    <string name="see_back">回看</string>
    <string name="book">预约</string>
    <string name="discusses">评论</string>
    <string name="discusses2">评论：</string>
    <string name="toast_comment_null">请输入评论内容！</string>
    <string name="dis_num">($num/140)</string>
    <string name="toast_comment_too_lang">输入评论内容过长！</string>
    <string name="toast_comment_success">评论发表成功！</string>
    <string name="toast_comment_verify">评论已提交，待审核通过后显示！</string>
    <string name="toast_weibo_success">发布到微博成功！</string>
    <string name="toast_comment_failed">评论发表失败！</string>
    <string name="share_weibo_msg">我正在用“天威多屏看”观看《$name》节目，十分精彩，推荐你也来看。关注  @天威TV微博 ，能在第一时间获取更多精彩内容哦。</string>
    <string name="share">分享</string>
    <string name="particular_share_to_other">分享到其它</string>
    <string name="sina_weibo">新浪微薄</string>
    <string name="qq_weibo">腾讯微薄</string>
    <string name="qq_zone">QQ空间</string>
    <string name="douban">豆瓣</string>
    <string name="renren">人人网</string>
    <string name="intro">简介：</string>
    <string name="particular_chapter">剧集</string>
    <string name="particular_intro">详细介绍</string>
    <string name="particular_say_to_friends">我来说几句：</string>
    <string name="particular_say_to_who">您要告诉谁？</string>
    <string name="particular_rote_add_one">投一票</string>
    <string name="particular_movie_review">影片评价</string>
    <string name="particular_movie_review_hint">我也来说几句：</string>
    <string name="comment_weibo_msg">我正在用“天威多屏看”观看《$name》节目。</string>
    <string name="particular_movie_review_submit">发	表</string>
    <string name="particular_dialog_submit">确定</string>
    <string name="particular_paly_full_screen">全屏播放</string>
    <string name="collect_delete_all">清空收藏夹</string>
    <string name="collect_delete_edit">编辑</string>
    <string name="collect_delete_finish">完成</string>
    <string name="poster">海报</string>
    <string name="list">列表</string>
    <string name="recommend_perfit">精彩推荐</string>
    <string name="channel_type">频道分类</string>
    <string name="channel_type_all">全部频道</string>
    <string name="channel_type_free">免费频道</string>
    <string name="channel_type_needpay">付费频道</string>
    <string name="channel_type_hd">高清频道</string>
    <string name="channel_pay_by_month">频道包月</string>
    <string name="orign_select">地区筛选</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="programme_playing">当前节目：</string>
    <string name="programme_next">下一个节目：</string>
    <string name="play_time_msg">00:00:00</string>
    <string name="play_time_devider">/</string>
    <string name="book_success">预约成功！</string>
    <string name="book_failed">预约失败！</string>
    <string name="book_cancel_success">取消预约成功！</string>
    <string name="book_cancel_failed">取消预约失败！</string>
    <string name="notify_title">天威多屏看提醒您！</string>
    <string name="vod_fee_type">套餐</string>
    <string name="vod_type_new">最新</string>
    <string name="vod_type_hot">最热</string>
    <string name="vod_type_select">分类筛选</string>
    <string name="vod_type_type">类型：</string>
    <string name="vod_type_originName">地区：</string>
    <string name="vod_type_publishDate">年份：</string>
    <string name="player_sation_out">借屏</string>
    <string name="player_discuss_title">To Share The Sina micro-blog\r\n分享到新浪微博</string>
    <string name="send_pic">发送截图</string>
    <string name="player_discuss_num">剩余$num个字</string>
    <string name="player_discuss_submit">发表评论</string>
    <string name="player_discusser_msg">他的信息</string>
    <string name="cancel">取消</string>
    <string name="send">发送</string>
    <string name="play_finish">播放结束，谢谢观看！</string>
    <string name="back">返回</string>
    <string name="search">搜索</string>
    <string name="search_hint">输入影片、导演或演员名</string>
    <string name="hot_search_today">今日热搜</string>
    <string name="search_result_title">搜索结果</string>
    <string name="search_result">关键字“$keyWord”搜索到$num条结果</string>
    <string name="see_recommend">，看看我们给您推荐的吧！</string>
    <string name="movie_hot_query">热搜影片</string>
    <string name="all">全部($num)</string>
    <string name="vod">点播($num)</string>
    <string name="live">直播($num)</string>
    <string name="no_result_information">暂无搜索内容,您可以观看其它热搜影片！</string>
    <string name="loading">请稍候…</string>
    <string name="ok">ok</string>
    <string name="left">left</string>
    <string name="up">up</string>
    <string name="right">right</string>
    <string name="down">down</string>
    <string name="home">home</string>
    <string name="menu">"menu"</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="alpha_A">A</string>
    <string name="alpha_B">B</string>
    <string name="alpha_a">a</string>
    <string name="alpha_b">b</string>
    <string name="star">*</string>
    <string name="pound">#</string>
    <string name="pause">pause</string>
    <string name="play">play</string>
    <string name="mute">mute</string>
    <string name="left_key_down_event">left_key_down_event</string>
    <string name="mute_key_down_event">mute_key_down_event</string>
    <string name="mute_key_up_event">mute_key_up_event</string>
    <string name="wheel_up">wheel_up</string>
    <string name="wheel_down">wheel_down</string>
    <string name="mouse_leftkey">mouse_leftkey</string>
    <string name="mouse_rightkey">mouse_rightkey</string>
    <string name="Video">Video</string>
    <string name="Audio">Audio</string>
    <string name="Image">Image</string>
    <string name="empty">empty</string>
    <string name="language">language:</string>
    <string name="director">director:</string>
    <string name="getMediaInfo">getMediaInfo</string>
    <string name="pushMediaURL">pushMediaURL</string>
    <string name="httpeg">eg:http://</string>
    <string name="input_ind">pls input URL</string>
    <string name="Sensor">Sensor</string>
    <string name="AppList">AppList</string>
    <string name="Media">Media</string>
    <string name="Mouse">Mouse</string>
    <string name="Touch">Touch</string>
    <string name="Keyboard">Keyboard</string>
    <string name="user_mail">邮箱：</string>
    <string name="user_phone">手机：</string>
    <string name="user_nickname">昵称：</string>
    <string name="user_introduction">个人介绍：</string>
    <string name="personal_info">个人信息</string>
    <string name="personal_contact_way">联系方式(请输入正确的邮箱或手机号，便于找回密码)</string>
    <string name="personal_return">返  回</string>
    <string name="authority_setmeal_info">多屏看套餐</string>
    <string name="authority_by_month">包月(20元/月)</string>
    <string name="authority_by_year">包月(110元/年)</string>
    <string name="authority_time_later">以后再说</string>
</resources>