<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg_main_app">

    <LinearLayout 
        android:id="@+id/relativeLayout1"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical" >
        
        <Button
            android:id="@+id/key_back"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="@string/back" />
        
        <Button
            android:id="@+id/key_home"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="@string/home" />
        
        <Button
            android:id="@+id/key_search"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="@string/search" />
        
        <Button
            android:id="@+id/key_menu"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="@string/menu" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/key_up"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/up" />

        <Button
            android:id="@+id/key_ok"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/ok" />

        <Button
            android:id="@+id/key_left"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/key_ok"
            android:text="@string/left" />

        <Button
            android:id="@+id/key_right"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@id/key_ok"
            android:text="@string/right" />

        <Button
            android:id="@+id/key_down"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:text="@string/down" />
    </RelativeLayout>

    <Button
        android:id="@+id/num_0"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/relativeLayout1"
        android:text="@string/num0" />
    
    <Button
        android:id="@+id/num_1"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_below="@id/relativeLayout1"
        android:layout_toRightOf="@id/num_0"
        android:text="@string/num1" />
    
    <Button
        android:id="@+id/alpha_A"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_below="@id/relativeLayout1"
        android:layout_toRightOf="@id/num_1"
        android:text="@string/alpha_A" />
    
    <Button
        android:id="@+id/alpha_B"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_below="@id/relativeLayout1"
        android:layout_toRightOf="@id/alpha_A"
        android:text="@string/alpha_B" />
    
    <Button
        android:id="@+id/alpha_a"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_below="@id/relativeLayout1"
        android:layout_toRightOf="@id/alpha_B"
        android:text="@string/alpha_a" />
    
    <Button
        android:id="@+id/alpha_b"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_below="@id/relativeLayout1"
        android:layout_toRightOf="@id/alpha_a"
        android:text="@string/alpha_b" />
    
    <Button
        android:id="@+id/key_star"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_below="@id/relativeLayout1"
        android:layout_toRightOf="@id/alpha_b"
        android:text="@string/star" />
    
    <Button
        android:id="@+id/key_pound"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_below="@id/relativeLayout1"
        android:layout_toRightOf="@id/key_star"
        android:text="@string/pound" />
    
    <Button
        android:id="@+id/key_pause"
        android:layout_below="@id/num_0"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignLeft="@id/num_0"
        android:text="@string/pause" />

    <Button
        android:id="@+id/key_play"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/num_0"
        android:layout_toRightOf="@id/key_pause"
        android:text="@string/play" />
    
    <Button
        android:id="@+id/key_mute"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/num_0"
        android:layout_toRightOf="@id/key_play"
        android:text="@string/mute" />

    <Button
        android:id="@+id/leftkeydown"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/key_pause"
        android:layout_alignLeft="@id/key_pause"
        android:text="@string/left_key_down_event" />

    <Button
        android:id="@+id/mutekeydown"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/key_pause"
        android:layout_toRightOf="@id/leftkeydown"
        android:text="@string/mute_key_down_event" />
    
    <Button
        android:id="@+id/mutekeyup"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/key_pause"
        android:layout_toRightOf="@+id/mutekeydown"
        android:text="@string/mute_key_up_event" />    

</RelativeLayout>