<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:background="@drawable/bg_main_app">

    <LinearLayout android:layout_marginTop="20dp"
	    android:layout_marginLeft="20dp"
	    android:layout_width="100dp"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        
    <Button android:id="@+id/keyboard_btn"
	    android:layout_width="100dp"
	    android:layout_marginTop="20dp"
    	android:layout_height="40dp"
    	android:text="@string/Keyboard"/>
    
    <Button android:id="@+id/touch_btn"
	    android:layout_width="100dp"
	    android:layout_marginTop="20dp"
    	android:layout_height="40dp"
    	android:text="@string/Touch"/>
    
    <Button android:id="@+id/mouse_btn"
	    android:layout_width="100dp"
	    android:layout_marginTop="20dp"
    	android:layout_height="40dp"
    	android:text="@string/Mouse"/>
    
    </LinearLayout>
    
    <LinearLayout android:layout_marginTop="20dp"
	    android:layout_marginLeft="20dp"
	    android:layout_width="100dp"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        
    <Button android:id="@+id/media_btn"
	    android:layout_width="100dp"
	    android:layout_marginTop="20dp"
    	android:layout_height="40dp"
    	android:text="@string/Media"/>
    
    <Button android:id="@+id/app_btn"
	    android:layout_width="100dp"
	    android:layout_marginTop="20dp"
    	android:layout_height="40dp"
    	android:text="@string/AppList"/>
    
    <Button android:id="@+id/sensor_btn"
	    android:layout_width="100dp"
	    android:layout_marginTop="20dp"
    	android:layout_height="40dp"
    	android:text="@string/Sensor"/>

    </LinearLayout>    
    
</LinearLayout>