<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_gravity="center_vertical"
    >
       <TextView
                android:id="@+id/setmeal_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="left"
                android:text="@string/authority_setmeal_info"
                android:textColor="#484848" />
            
            <CheckBox
            android:id="@+id/checkBM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dip"
                android:layout_toRightOf="@+id/setmeal_info"
            android:button="@drawable/login_checkbox_button"
            android:textColor="#484848"
            android:text="@string/authority_by_month" />
            
                <CheckBox
            android:id="@+id/checkBY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
                android:layout_toRightOf="@+id/setmeal_info"
            android:button="@drawable/login_checkbox_button"
            android:textColor="#484848"
            android:text="@string/authority_by_year" />
            
              <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="20dip"
                android:layout_marginRight="30dip"
                android:background="@drawable/btn_focus"
                android:text="@string/authority_time_later" />
</RelativeLayout>